# Jotmate

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
assets/: icon.txt  logo.ansi  logos.txt
scripts/: run-sync.sh  time-checker-node.js  tui.sh
src/: cli.rs  config.rs  error.rs  main.rs
src/sync/: cache.rs  discover.rs  mod.rs  runner.rs
src/time/: api.rs  auth.rs  cache.rs  compute.rs  display.rs  mod.rs
src/tui/: app.rs  draw.rs  events.rs  input.rs  layout.rs  mod.rs  streaming.rs  widgets.rs
src/tui/widgets/: logo.rs  menu.rs  mod.rs  output_pane.rs  settings_form.rs
