[package]
name = "jotmate"
version = "0.1.0"
edition = "2021"
description = "Jotform developer productivity CLI"

[[bin]]
name = "jotmate"
path = "src/main.rs"

[dependencies]
clap        = { version = "4.5",  features = ["derive", "env"] }
ratatui     = "0.29"
crossterm   = "0.28"
tokio       = { version = "1.43", features = ["full"] }
reqwest     = { version = "0.12", features = ["json", "cookies"] }
keyring     = "3.6"
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
toml        = "0.8"
dirs        = "5.0"
chrono      = { version = "0.4",  features = ["serde"] }
anyhow      = "1.0"
thiserror   = "2.0"
rpassword   = "7.3"
tempfile    = "3.14"
futures     = "0.3"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
